# tuun

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGES.md  Cargo.toml  Makefile  README.md  TDL  TODO  TODO.md  config.toml  configure  q.sh  quu-old.sh  quu.sh  run.sh  tuun.sh
scripts/: fzm  mpv.sh  quu.sh  tuun.sh
src/: args.rs  config.rs  delay.rs  flags.rs  globals.rs  hotkeys.rs  integrations.rs  macros.rs  main.rs  mpv.rs  playlists.rs  rpc.rs  scrobble.rs  structs.rs  track.rs  traits.rs
