[package]
name = "tuun"
version = "4.2.0"
edition = "2024"
authors = [ "Toxikuu" ]
description = "A simple music player using MPV as a backend"
homepage = "https://github.com/Toxikuu/tuun"
repository = "https://github.com/Toxikuu/tuun.git"
license = "GPL-3.0"
readme = "README.md"
keywords = [
    "music",
    "player",
]

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"

[dependencies]
anyhow = "1.0.96"
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git" }
id3 = "1.16.3"
once_cell = "1.20.3"
permitit = "0.1.1"
rustfm-scrobble = "1.1.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.9"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
