[package]
name = "tuun"
version = "5.4.0"
edition = "2024"
authors = [ "Toxikuu" ]
description = "A simple music player using MPV as a backend"
homepage = "https://github.com/Toxikuu/tuun"
repository = "https://github.com/Toxikuu/tuun.git"
license = "GPL-3.0"
readme = "README.md"
keywords = [
    "music",
    "player",
]

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.43", features = ["derive"] }
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git", rev = "0224adc04b711c8f186a0fa573d5424765923e49" }
id3 = "1.16"
once_cell = "1.20"
permitit = "0.1"
rustfm-scrobble = { git = "https://github.com/toxikuu/rustfm-scrobble" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
