[package]
name = "tuun"
version = "5.6.1"
edition = "2024"
authors = [ "Toxikuu" ]
description = "A simple music player using MPV as a backend"
homepage = "https://github.com/Toxikuu/tuun"
repository = "https://github.com/Toxikuu/tuun.git"
license = "GPL-3.0"
readme = "README.md"
keywords = [
    "music",
    "player",
]

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence" }
homedir = { version = "0.3.6", default-features = false }
id3 = { version = "1.16", default-features = false }
once_cell = "1.20"
permitit = "0.1"
rustfm-scrobble = { git = "https://github.com/toxikuu/rustfm-scrobble" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 9 }
suspicious = { level = "deny", priority = 8 }
complexity = { level = "deny", priority = 7 }
perf = { level = "deny", priority = 6 }
nursery = { level = "deny", priority = 2 }
unwrap_used = { level = "deny" }
